# t5-2-MachineLearningMethods__

./: Makefile  README.md  requirements.txt  requirements_text_classification.txt  requirements_text_processing.txt  setup.cfg
src/charts/: main.py
src/control_work1/: main.ju.py
src/control_work2@text_classification/: main.ipynb  main.ju.py
src/lab1/: main.ipynb  main.ju.py  mine_earthquake_data.py
src/reinforcement_learning/policy_iteration/: main.py
src/text_classification/: main.html  main.ipynb  main.ju.py
src/text_processing/: main.ipynb  main.ju.py
