[metadata]
name = t5-2-MachineLearningMethods
description = Machine Learning Methods Course
author = DeadlySquad13
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10.0

[options]
packages =find:
install_requires =
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
keymappings = py.typed

[flake8]
max-line-length = 100
